# healthdcat-converter

./: README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample.csv
examples/: README.md  advanced_usage.py  basic_usage.py  custom_plugin_example.py
src/healthdcat_converter/: __init__.py  converter.py  plugin_base.py  plugin_loader.py
src/healthdcat_converter/plugins/: __init__.py  csv_reader.py  custom_example.py  rdf_generator.py  validator.py
tests/: test_converter.py  test_individual_plugins.py  test_plugins.py
